== Trunk

* Enhancements

  * Support file fields using attaches_file (Patch from Kyle Hargraves)
  * Support button elements (Patch from Nick Sieger)
  * Support matching select options by regexp (Patch from Kyle Hargraves)
  * Support relative links, including href="?foo=bar" (Patch from Kyle Hargraves)
  * Support links to fully qualified URLs starting with http:// or https:// (Luke Melia)
  
* Bug fixes

  * Fix bug with empty select list option (Patch from Kyle Hargraves)
  * Fix regression of not sending default values in password fields
  
== 0.2.0 / 2008-04-04

* 4 Major enhancements

  * Add save_and_open_page to aid in debugging
  * Add radio button support via #chooses method
  * Add basic support for Rails-generated JavaScript link tags
  * Add support for checkboxes (Patches from Kyle Hargraves and Jarkko Laine)
  * Add support for textarea fields (Patch from Sacha Schlegel)
  
* 8 Minor enhancements
  
  * Added reloads method to reload the page (Patch from Kamal Fariz Mahyuddi)
  * Prevent making a request if clicking on local anchor link (Patch from Kamal Fariz Mahyuddi)
  * Added clicks_link_within(selector, link_text), allowing restricting link search 
  to within a given css selector (Patch from Luke Melia)
  * Allow specifying the input name/label when doing a select (Patch from David Chelimsky)
  * Raise a specific exception if the developer tries to manipulate form elements before loading a page (Patch from James Deville)
  * Add support for alternate POST, PUT and DELETE link clicking (Patch from Kyle Hargraves)
  * Change clicks_link to find the shortest matching link (Patch from Luke Melia)
  * Improve matching for labels in potentially ambiguous cases
  
* 7 Bug fixes

  * Fix incorrect serializing of collection inputs, i.e. name contains [] (Patch from Kamal Fariz Mahyuddi)
  * Serialize empty text field values just like browsers (Patch from Kamal Fariz Mahyuddi)