@@ -56,7 +56,7 @@ end
 
 require 'spec/rake/verify_rcov'
 RCov::VerifyTask.new(:verify_rcov => :rcov) do |t|
-  t.threshold = 95.5 # Make sure you have rcov 0.7 or higher!
+  t.threshold = 96.3
 end
 
 remove_task "default"
